empezando de 0 el html

--- a/index.html
+++ b/index.html
@@ -1,178 +1,11 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sitio Web de Noticias</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" href="styles.css">
+  <title>Document</title>
 </head>
 <body>
-
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Sitio Web de Noticias</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item"><a class="nav-link" href="#inicio">Inicio</a></li>
-      <li class="nav-item"><a class="nav-link" href="#ultima-hora">Noticias de Última Hora</a></li>
-      <li class="nav-item"><a class="nav-link" href="#opinion">Opinión</a></li>
-      <li class="nav-item"><a class="nav-link" href="#reportajes">Reportajes</a></li>
-      <li class="nav-item"><a class="nav-link" href="#entrevistas">Entrevistas</a></li>
-      <li class="nav-item"><a class="nav-link" href="#fotografias">Fotografías</a></li>
-      <li class="nav-item"><a class="nav-link" href="#contacto">Contacto</a></li>
-      <li class="nav-item"><a class="nav-link" href="#acerca-de">Acerca de Nosotros</a></li>
-      <li class="nav-item"><a class="nav-link" href="#terminos-privacidad">Términos y Privacidad</a></li>
-    </ul>
-  </div>
-</nav>
-
-<div class="container mt-5">
-  <section id="inicio">
-    <h2>Página de Inicio</h2>
-    <p>Bienvenido a nuestro sitio web de noticias. Aquí encontrarás las últimas novedades y reportajes sobre diversos temas.</p>
-  </section>
-  <hr>
-  
-  <section id="ultima-hora">
-    <h2>Noticias de Última Hora</h2>
-    <div class="noticia">
-      <div class="row">
-        <div class="col-md-6">
-          <img src="Nueva carpeta/images1.jpg" alt="Noticia 1" class="img-fluid rounded same-size-img">
-        </div>
-        <div class="col-md-6">
-          <h3 class="noticia-titulo">"Tenista Joven Sorprende a Todos al Vencer a un Jugador Clasificado en el Top 10"</h3>
-          <p class="noticia-resumen">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas at interdum neque.</p>
-        </div>
-      </div>
-    </div>
-    <div class="noticia">
-      <div class="row">
-        <div class="col-md-6">
-          <img src="Nueva carpeta/images2.jpg" alt="Noticia 2" class="img-fluid rounded same-size-img">
-        </div>
-        <div class="col-md-6">
-          <h3 class="noticia-titulo">"Estrella del Baloncesto Anuncia su Retiro Después de una Carrera Legendaria"</h3>
-          <p class="noticia-resumen">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
-        </div>
-      </div>
-    </div>
-  </section>
-  <hr>
-  
-  <section id="reportajes">
-    <h2>Reportajes</h2>
-    <div class="reportaje">
-      <div class="row">
-        <div class="col-md-6">
-          <img src="Nueva carpeta/images3.jpg" alt="Reportaje 1" class="img-fluid rounded same-size-img">
-        </div>
-        <div class="col-md-6">
-          <h3 class="noticia-titulo">"El Impacto Social del Deporte en la Comunidad Local"</h3>
-          <p class="noticia-resumen">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam quis libero eu est faucibus sollicitudin.</p>
-        </div>
-      </div>
-    </div>
-    <div class="reportaje">
-      <div class="row">
-        <div class="col-md-6">
-          <img src="Nueva carpeta/images4.jpg" alt="Reportaje 2" class="img-fluid rounded same-size-img">
-        </div>
-        <div class="col-md-6">
-          <h3 class="noticia-titulo">"Explorando la Evolución de las Estrategias en el Fútbol a lo Largo de los Años"</h3>
-          <p class="noticia-resumen">Sed auctor ex et arcu convallis, a lacinia nunc tristique. In hac habitasse platea dictumst.</p>
-        </div>
-      </div>
-    </div>
-  </section>
-  <hr>
-  
-  <section id="entrevistas">
-    <h2>Entrevistas</h2>
-    <div class="entrevista">
-      <div class="row">
-        <div class="col-md-6">
-          <img src="Nueva carpeta/images5.jpg" alt="Entrevista 1" class="img-fluid rounded same-size-img">
-        </div>
-        <div class="col-md-6">
-          <h3 class="noticia-titulo">"Descubriendo la Mentalidad Ganadora de un Atleta de Alto Rendimiento"</h3>
-          <p class="noticia-resumen">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce a ipsum ut erat feugiat malesuada nec eu dui.</p>
-        </div>
-      </div>
-    </div>
-    <div class="entrevista">
-      <div class="row">
-        <div class="col-md-6">
-          <img src="Nueva carpeta/images6.jpg" alt="Entrevista 2" class="img-fluid rounded same-size-img">
-        </div>
-        <div class="col-md-6">
-          <h3 class="noticia-titulo">"Conversación con un Entrenador de Natación sobre la Importancia de la Técnica"</h3>
-          <p class="noticia-resumen">Vestibulum malesuada ante a aliquet volutpat. In at sapien a justo vestibulum iaculis.</p>
-        </div>
-      </div>
-    </div>
-  </section>
-  <hr>
-  <section id="fotografias">
-    <h2>Fotografías</h2>
-    <p>Explora nuestro repertorio de fotografías impactantes que capturan momentos importantes y eventos significativos.</p>
-    
-    <div class="row">
-      <div class="col-md-4">
-        <img src="Nueva carpeta/images7.jpg" alt="Imagen 1" class="img-fluid rounded same-size-img">
-        <p class="imagen-descripcion">Descripción de la imagen 1</p>
-      </div>
-      <div class="col-md-4">
-        <img src="Nueva carpeta/images8.jpg" alt="Imagen 2" class="img-fluid rounded same-size-img">
-        <p class="imagen-descripcion">Descripción de la imagen 2</p>
-      </div>
-      <div class="col-md-4">
-        <img src="Nueva carpeta/images9.jpg" alt="Imagen 3" class="img-fluid rounded same-size-img">
-        <p class="imagen-descripcion">Descripción de la imagen 3</p>
-      </div>
-    </div>
-  </section>
-  <hr>
-  <section id="contacto">
-    <h2>Contacto</h2>
-    <p>¿Quieres ponerte en contacto con nosotros? Utiliza el siguiente formulario para hacernos llegar tus comentarios y preguntas.</p>
-    <form action="#" method="post">
-      <div class="form-group">
-        <label for="nombre">Nombre:</label>
-        <input type="text" id="nombre" name="nombre" class="form-control" required>
-      </div>
-      <div class="form-group">
-        <label for="email">Correo Electrónico:</label>
-        <input type="email" id="email" name="email" class="form-control" required>
-      </div>
-      <div class="form-group">
-        <label for="mensaje">Mensaje:</label>
-        <textarea id="mensaje" name="mensaje" class="form-control" rows="5" required></textarea>
-      </div>
-      <button type="submit" class="btn btn-primary">Enviar</button>
-    </form>
-  </section>
-  <hr>
-  <section id="acerca-de">
-    <h2>Acerca de Nosotros</h2>
-    <p>Somos un equipo apasionado por brindarte noticias confiables y relevantes. Descubre quiénes somos y nuestra misión.</p>
-  </section>
-  <hr>
-  <section id="terminos-privacidad">
-    <h2>Términos y Privacidad</h2>
-    <p>Lee nuestros términos de uso y política de privacidad para comprender cómo manejamos tus datos y proporcionamos contenido.</p>
-  </section>
-</div>
-
-<footer class="footer">
-  <p>Derechos Reservados &copy; 2023 Sitio Web de Noticias</p>
-</footer>
-
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque quia, nostrum rerum illo cupiditate suscipit dolore sint autem voluptatum, esse quisquam, eaque rem doloribus pariatur earum consequuntur impedit minus natus?</p>
 </body>
 </html>
