Cambiar de titulo

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <title>Document</title>
 </head>
 <body>
-  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque quia, nostrum rerum illo cupiditate suscipit dolore sint autem voluptatum, esse quisquam, eaque rem doloribus pariatur earum consequuntur impedit minus natus?</p>
+    <p>TALLER DE SISTEMAS<p>
 </body>
 </html>
