--- a/index.html
+++ b/index.html
@@ -1,11 +1,191 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Sitio Web de Noticias</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <p>TALLER DE SISTEMAS<p>
+
+  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <a class="navbar-brand" href="#">Sitio Web de Noticias</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ml-auto"> <!-- ml-auto aligns the menu items to the right on larger screens -->
+        <li class="nav-item"><a class="nav-link" href="#ultima-hora">Noticias de Última Hora</a></li>
+        <li class="nav-item"><a class="nav-link" href="#reportajes">Reportajes</a></li>
+        <li class="nav-item"><a class="nav-link" href="#entrevistas">Entrevistas</a></li>
+        <li class="nav-item"><a class="nav-link" href="#fotografias">Fotografías</a></li>
+        <li class="nav-item"><a class="nav-link" href="#contacto">Contacto</a></li>
+        <li class="nav-item"><a class="nav-link" href="#acerca-de">Acerca de Nosotros</a></li>
+        <li class="nav-item"><a class="nav-link" href="#terminos-privacidad">Términos y Privacidad</a></li>
+      </ul>
+    </div>
+</nav>
+
+<div class="container mt-5">
+  <section id="inicio">
+    <h2>Página de Inicio</h2>
+    <p>Bienvenido a nuestro sitio web de noticias. Aquí encontrarás las últimas novedades y reportajes sobre diversos temas.</p>
+  </section>
+  <hr>
+  
+  <section id="ultima-hora">
+    <h2>Noticias de Última Hora</h2>
+    <div class="noticia">
+      <div class="row">
+        <div class="col-md-6 ">
+          <img src="Nueva carpeta/images1.jpg" alt="Noticia 1" class="img-fluid rounded same-size-img">
+        </div>
+        <div class="col-md-6">
+          <a href="indexNoticia1.html" style="color: black;">
+            <h3 class="noticia-titulo">"Tenista Joven Sorprende a Todos al Vencer a un Jugador Clasificado en el Top 10"</h3>
+          </a>
+          <p class="noticia-resumen">El tenista estadounidense Ben Shelton vence a Alexander Zverev contra todo pronostico y avanza a los cuartos de final de Wimbledon.</p>
+        </div>
+      </div>
+    </div>
+    <div class="noticia">
+      <div class="row">
+        <div class="col-md-6">
+          <img src="Nueva carpeta/images2.jpg" alt="Noticia 2" class="img-fluid rounded same-size-img">
+        </div>
+        <div class="col-md-6">
+          <a href="indexNoticia1.html" style="color: black;">
+            <h3 class="noticia-titulo">"Estrella del Baloncesto Anuncia su Retiro Después de una Carrera Legendaria"</h3>
+          </a>
+          <p class="noticia-resumen">Tony Parker, despues de 18 temporadas en la NBA y un gran repertorio de titulos individuales como colectivos se retira a la edad de 39 anios.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <hr>
+  
+  <section id="reportajes">
+    <h2>Reportajes</h2>
+    <div class="reportaje">
+      <div class="row">
+        <div class="col-md-6">
+          <img src="Nueva carpeta/images3.jpg" alt="Reportaje 1" class="img-fluid rounded same-size-img">
+        </div>
+        <div class="col-md-6">
+          <a href="indexReportaje1.html" style="color: black;">
+            <h3 class="noticia-titulo">"El Impacto Social del Deporte en la Comunidad Local"</h3>
+          </a>
+          <p class="noticia-resumen">En este reportaje informaremos sobre las consecuencias del deporte en general sobre las ciudades y como afecta de manera positiva la vida de las personas.</p>
+        </div>
+      </div>
+    </div>
+    <div class="reportaje">
+      <div class="row">
+        <div class="col-md-6">
+          <img src="Nueva carpeta/images4.jpg" alt="Reportaje 2" class="img-fluid rounded same-size-img">
+        </div>
+        <div class="col-md-6">
+          <a href="indexNoticia1.html" style="color: black;">
+            <h3 class="noticia-titulo">"Explorando la Evolución de las Estrategias en el Fútbol a lo Largo de los Años"</h3>
+          </a>
+          <p class="noticia-resumen">El futbol evoluciono estrategicamente desde su aparicion con inovadoras tecnicas que hasta el dia de hoy dan mucho en que pensar.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <hr>
+  
+  <section id="entrevistas">
+    <h2>Entrevistas</h2>
+    <div class="entrevista">
+      <div class="row">
+        <div class="col-md-6">
+          <img src="Nueva carpeta/images5.jpg" alt="Entrevista 1" class="img-fluid rounded same-size-img">
+        </div>
+        <div class="col-md-6">
+          <a href="indexEntrevista1.html" style="color: black;">
+            <h3 class="noticia-titulo">"Descubriendo la Mentalidad Ganadora de un Atleta de Alto Rendimiento"</h3>
+          </a>
+          <p class="noticia-resumen">Michael Phelps, maximo ganador de medalla de oro en los juegos olimpicos revela cual es su forma de pensar de cara a una competencia de alto nivel que lo distingue de los demas deportistas.</p>
+        </div>
+      </div>
+    </div>
+    <div class="entrevista">
+      <div class="row">
+        <div class="col-md-6">
+          <img src="Nueva carpeta/images6.jpg" alt="Entrevista 2" class="img-fluid rounded same-size-img">
+        </div>
+        <div class="col-md-6">
+          <h3 class="noticia-titulo">"Conversación con un Entrenador de boxeo sobre la Importancia de la Técnica"</h3>
+          <p class="noticia-resumen">Hablaremos de la importancia de la tecnica en un combate de boxeo y como ganar ventaja descubriendo las debilidades del rival.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <hr>
+  <section id="fotografias">
+    <h2>Fotografías</h2>
+    <p>Explora nuestro repertorio de fotografías impactantes que capturan momentos importantes y eventos significativos.</p>
+    
+    <div class="row">
+      <div class="col-md-3">
+        <img src="Nueva carpeta/images7.jpg" alt="Imagen 1" class="img-fluid rounded same-size-img">
+        <p class="imagen-descripcion">Daniil Medvedev, tenista Nro 3 del mundo</p>
+      </div>
+      <div class="col-md-3">
+        <img src="Nueva carpeta/images8.jpg" alt="Imagen 2" class="img-fluid rounded same-size-img">
+        <p class="imagen-descripcion">Tom Brady, ganador de 7 Super Bowl</p>
+      </div>
+      <div class="col-md-3">
+        <img src="Nueva carpeta/images9.jpg" alt="Imagen 3" class="img-fluid rounded same-size-img">
+        <p class="imagen-descripcion">Brian Ortega, luchador profesional de MMA</p>
+      </div>
+      <div class="col-md-3">
+        <img src="Nueva carpeta/image10.jpg" alt="Imagen 4" class="img-fluid rounded same-size-img">
+        <p class="imagen-descripcion">Tiger Woods, considerado el mejor golfista de todos los tiempos</p>
+      </div>
+    </div>
+</section>
+
+  <hr>
+  <section id="contacto">
+    <h2>Contacto</h2>
+    <p>¿Quieres ponerte en contacto con nosotros? Utiliza el siguiente formulario para hacernos llegar tus comentarios y preguntas.</p>
+    <form action="#" method="post">
+      <div class="form-group">
+        <label for="nombre">Nombre:</label>
+        <input type="text" id="nombre" name="nombre" class="form-control" required>
+      </div>
+      <div class="form-group">
+        <label for="email">Correo Electrónico:</label>
+        <input type="email" id="email" name="email" class="form-control" required>
+      </div>
+      <div class="form-group">
+        <label for="mensaje">Mensaje:</label>
+        <textarea id="mensaje" name="mensaje" class="form-control" rows="5" required></textarea>
+      </div>
+      <button type="submit" class="btn btn-primary">Enviar</button>
+    </form>
+  </section>
+  <hr>
+  <section id="acerca-de">
+    <h2>Acerca de Nosotros</h2>
+    <p>Somos un equipo apasionado por brindarte noticias confiables y relevantes. Descubre quiénes somos y nuestra misión.</p>
+  </section>
+  <hr>
+  <section id="terminos-privacidad">
+    <h2>Términos y Privacidad</h2>
+    <p>Lee nuestros términos de uso y política de privacidad para comprender cómo manejamos tus datos y proporcionamos contenido.</p>
+  </section>
+</div>
+
+<footer class="footer">
+  <p>Derechos Reservados &copy; 2023 Sitio Web de Noticias</p>
+</footer>
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
